; ModuleID = '/home/carl/AnghaBench/tengine/src/event/modules/extr_ngx_rtsig_module.c_ngx_check_ngx_overflow_threshold_bounds.c'
source_filename = "/home/carl/AnghaBench/tengine/src/event/modules/extr_ngx_rtsig_module.c_ngx_check_ngx_overflow_threshold_bounds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ngx_linux_rtsig_max = common dso_local global i64 0, align 8
@NGX_LOG_WARN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [75 x i8] c"\22rtsig_overflow_threshold\22 is not supported since Linux 2.6.6-mm2, ignored\00", align 1
@NGX_CONF_OK = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*, i8*)* @ngx_check_ngx_overflow_threshold_bounds to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ngx_check_ngx_overflow_threshold_bounds(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i64, i64* @ngx_linux_rtsig_max, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %3
  %11 = load i32*, i32** %5, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = call i8* @ngx_conf_check_num_bounds(i32* %11, i8* %12, i8* %13)
  store i8* %14, i8** %4, align 8
  br label %20

15:                                               ; preds = %3
  %16 = load i32, i32* @NGX_LOG_WARN, align 4
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @ngx_conf_log_error(i32 %16, i32* %17, i32 0, i8* getelementptr inbounds ([75 x i8], [75 x i8]* @.str, i64 0, i64 0))
  %19 = load i8*, i8** @NGX_CONF_OK, align 8
  store i8* %19, i8** %4, align 8
  br label %20

20:                                               ; preds = %15, %10
  %21 = load i8*, i8** %4, align 8
  ret i8* %21
}

declare dso_local i8* @ngx_conf_check_num_bounds(i32*, i8*, i8*) #1

declare dso_local i32 @ngx_conf_log_error(i32, i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
